--- a/WinkelAppProject/src/view/NieuwProduct.form
+++ b/WinkelAppProject/src/view/NieuwProduct.form
@@ -77,10 +77,6 @@
                                           <Component id="jButton2" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace max="32767" attributes="0"/>
-                                              <Component id="tfPrijs" min="-2" pref="300" max="-2" attributes="0"/>
-                                          </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
@@ -93,6 +89,13 @@
                                                       <Component id="selectCategories" min="-2" pref="300" max="-2" attributes="0"/>
                                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                                   </Group>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <EmptySpace max="32767" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="tfPrijs" alignment="1" min="-2" pref="300" max="-2" attributes="0"/>
+                                                  <Component id="labelProductId" alignment="1" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
@@ -115,7 +118,10 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                      <Component id="jlTitel" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jlTitel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelProductId" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="selectCategories" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -247,6 +253,8 @@
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlblPath">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelProductId">
             </Component>
           </SubComponents>
         </Container>
